--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="input">
                     <Button class="mainBtn submitBtn btn btn-success">立即登录</Button>
-                    <a class="mainBtn forgotBtn btn btn-warning" href="{:url('Repassword/student_repwd')}">忘记密码</a>
+                    <a class="mainBtn forgotBtn btn btn-warning" href="{:url('Repassword/repassword?type=1')}">忘记密码</a>
                 </div>
             </form>
 			
@@ -69,7 +69,7 @@
                 </div>
                 <div class="input">
                     <Button class="mainBtn submitBtn btn btn-success">立即登录</Button>
-                    <a class="mainBtn forgotBtn btn btn-warning" href="{:url('Repassword/teacher_repwd')}">忘记密码</a>
+                    <a class="mainBtn forgotBtn btn btn-warning" href="{:url('Repassword/repassword?type=2')}">忘记密码</a>
                 </div>
             </form>
 
