修改导入教师信息的初始密码，修改教师页面主页，无数据时提示

--- a/application/index/view/Teacher/teaching.html
+++ b/application/index/view/Teacher/teaching.html
@@ -71,7 +71,7 @@
 					</div>
 					<!-- 右侧主体 -->
 					<div class="cont-main clearfix">
-						{volist name="teachingCourse" id="vo"}
+						{volist name="teachingCourse" id="vo" empty="$empty"}
 							<div class="main-list">
 								<a href="{:url('studentList',['c_id'=>$vo.c_id])}">
 									<div><img src="__PUBLIC__/static/front/images/test-course.jpg"></div>
