修改登录判断

--- a/application/index/view/Notice/index.html
+++ b/application/index/view/Notice/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <!-- 左侧姓名 -->
                     <div class="list-name">
-                        <span>{:session('name')}</span>
+                        <span>{:session('s_name')}</span>
                     </div>
                     <!-- 左侧选项 -->
                     <div class="list-options">
