--- a/application/manage/view/Public/top.html
+++ b/application/manage/view/Public/top.html
@@ -10,7 +10,7 @@
         <div class="top-info-wrap">
             <ul class="top-info-list clearfix">
                 <li>欢迎您，管理员:</li>
-                <li><a href="{:url('system/admin_lst')}">{:session('name')}</a></li>
+                <li><a href="{:url('system/admin_lst')}">{:session('a_name')}</a></li>
                 <!-- <li><a href="{:url('system/change_pwd')}">修改密码</a></li> -->
                 <li><a href="{:url('Index/logout')}">退出</a></li>
             </ul>
