--- a/application/index/view/Teacher/teaching.html
+++ b/application/index/view/Teacher/teaching.html
@@ -35,7 +35,7 @@
 			</div>
 			<!-- 左侧姓名 -->
 			<div class="list-name">
-				<span>{:session('name')}</span>
+				<span>{:session('t_name')}</span>
 			</div>
 			<!-- 左侧选项 -->
 			<div class="list-options">
