--- a/application/manage/view/System_setting/admin_lst.html
+++ b/application/manage/view/System_setting/admin_lst.html
@@ -14,13 +14,13 @@
     <!--/sidebar-->
     <div class="main-wrap">
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="{:url('Index/home')}">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="{:url('system/lst')}">系统设置</a><span class="crumb-step">&gt;</span><span>管理员管理</span></div>
+            <div class="crumb-list"><i class="icon-font"></i><a href="{:url('Index/home')}">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="{:url('systemSetting/lst')}">系统设置</a><span class="crumb-step">&gt;</span><span>管理员管理</span></div>
         </div>
         <div class="result-wrap">
             <form name="myform" id="myform" method="post">
                 <div class="result-title">
                     <div class="result-list">
-                        <a href="{:url('system/add')}"><i class="icon-font"></i>新增管理员</a>
+                        <!--<a href="{:url('systemSetting/add')}"><i class="icon-font"></i>新增管理员</a>-->
                     </div>
                 </div>
                 <div class="result-content">
