整班选课实现

--- a/application/index/view/Unselected/details.html
+++ b/application/index/view/Unselected/details.html
@@ -75,7 +75,7 @@
 					<!-- 右侧主体 -->
 					<div class="cont-main clearfix">
 						<div class="main-info">
-							<a href = {:url('download/downCourseSyllabus',['c_id'=>$course.c_id])}>查看课程大纲</a>
+							<!--<a href = {:url('download/downCourseSyllabus',['c_id'=>$course.c_id])}>查看课程大纲</a>-->
 							<div class="main-choose-Y">
 								<a href = {:url('unselected/choose',['c_id'=>$course.c_id])}>选择该课程</a>
 							</div>
