--- a/application/manage/view/Student/lst.html
+++ b/application/manage/view/Student/lst.html
@@ -24,6 +24,7 @@
                         <a href="{:url('student/add')}"><i class="icon-font"></i>新增学生信息</a>
                         <a href="{:url('Student/searchbynum')}"><i class="icon-font">&#xe005;</i>按学号查找</a>
                         <a href="{:url('student/searchbyclass')}"><i class="icon-font">&#xe048;</i>按专业班级查找</a>
+                        (共计{$sum}人)
                     </div>
                 </div>
                 <div class="result-content">
@@ -31,7 +32,7 @@
                         <tr>
                             <th width="8%">学号</th>
                             <th width="8%">姓名</th>
-                            <th width="8%">专业</th>
+                            <th width="12%">专业</th>
                             <th width="10%">年级</th>
                             <th width="10%">班级</th>
                             <th width="10%">性别</th>
