--- a/application/index/view/Teacher/teaching.html
+++ b/application/index/view/Teacher/teaching.html
@@ -72,21 +72,24 @@
 					<!-- 右侧主体 -->
 					<div class="cont-main clearfix">
 						{volist name="teachingCourse" id="vo" empty="$empty"}
-							<div class="main-list">
-								<a href="{:url('studentList',['c_id'=>$vo.c_id])}">
-									<div><img src="__PUBLIC__/static/front/images/test-course.jpg"></div>
+							<a href="{:url('studentList',['c_id'=>$vo.c_id])}"><div class="main-list">
 									<span>{$vo.c_name}</span>
-								</a>
-							</div>
+							</div></a>
 						{/volist}
 					</div>
 				</div>
 		</div>
 	</div>
 	
-	<!-- 底部版权 -->
-	<div class="layout-copy">
-	    2017 &copy; 西安邮电大学
-	</div>
+	<!-- Footer区域 -->
+	<div class="el-footer">
+			<div class="links"> 
+				<a target="_blank" href="http://www.xiyou.edu.cn/">西安邮电大学</a> | 
+				<a target="_blank" href="http://cs.xupt.edu.cn:81/xiyoucs/index.asp">计算机学院</a> | 
+				 
+				<a target="_blank" href="http://222.24.63.100:9149/CAL">计算机应用技术协会</a>
+			</div>
+			<p class="copyright"> Copyright © 2018 ACAT All Rights Reserved </p>
+		</div>
 </body>
 </html>
