--- a/application/index/view/Teacher/studentList.html
+++ b/application/index/view/Teacher/studentList.html
@@ -73,10 +73,9 @@
 					<div class="cont-main clearfix">
                             {volist name="studentList" id="vo"}
                                 <div class="teacher-main-list">
-                                        <li class="item-name">{$vo.name}</li>
-                                        <li class="item-num">{$vo.s_num}</li>
-                                        <li class="item-class">{$vo.s_class}</li>
-                                    </a>
+										<span class="item-num">{$vo.s_num}</span>
+										<span class="item-name">{$vo.name}</span>
+										<span class="item-class">{$vo.s_class}</span>
                                 </div>
                             {/volist}
                         </div>
@@ -84,9 +83,15 @@
 		</div>
 	</div>
 	
-	<!-- 底部版权 -->
-	<div class="layout-copy">
-	    2017 &copy; 西安邮电大学
-	</div>
+	<!-- Footer区域 -->
+	<div class="el-footer">
+			<div class="links"> 
+				<a target="_blank" href="http://www.xiyou.edu.cn/">西安邮电大学</a> | 
+				<a target="_blank" href="http://cs.xupt.edu.cn:81/xiyoucs/index.asp">计算机学院</a> | 
+				 
+				<a target="_blank" href="http://222.24.63.100:9149/CAL">计算机应用技术协会</a>
+			</div>
+			<p class="copyright"> Copyright © 2018 ACAT All Rights Reserved </p>
+		</div>
 </body>
 </html>
