--- a/application/manage/view/Course/add.html
+++ b/application/manage/view/Course/add.html
@@ -48,11 +48,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                    <th width="10%"><i class="require-red">*</i>考核组织单位：</th>
-                                    <td>
-                                        <input name="c_check_address" value="院考" type="radio" />院考
-                                        <input name="c_check_address" value="校考" type="radio" />校考
-                                    </td>
+                                <th width="10%"><i class="require-red">*</i>考核组织单位：</th>
+                                <td>
+                                    <select class="common-text required" name="c_check_adress">
+                                        <option value="院考">院考</option>
+                                        <option value="校考">校考</option>
+
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
                                     <th width="10%"><i class="require-red">*</i>学分：</th>
@@ -81,14 +84,17 @@
                             <tr>
                                     <th width="10%"><i class="require-red">*</i>开课学期：</th>
                                     <td>
-                                        <input name="c_semester" value="1" type="radio" />1&nbsp;
-                                        <input name="c_semester" value="2" type="radio" />2  &nbsp;
-                                        <input name="c_semester" value="3" type="radio" />3  &nbsp;
-                                        <input name="c_semester" value="4" type="radio" />4 &nbsp; 
-                                        <input name="c_semester" value="5" type="radio" />5  &nbsp;
-                                        <input name="c_semester" value="6" type="radio" />6 &nbsp; 
-                                        <input name="c_semester" value="7" type="radio" />7  &nbsp;
-                                        <input name="c_semester" value="8" type="radio" />8 &nbsp;
+                                        <select class="common-text required" name="c_check_adress">
+                                            <option value="1">1 </option>
+                                            <option value="2">2 </option>
+                                            <option value="3">3 </option>
+                                            <option value="4">4 </option>
+                                            <option value="5">5 </option>
+                                            <option value="6">6 </option>
+                                            <option value="7">7 </option>
+                                            <option value="8">8 </option>
+    
+                                        </select>
                                     </td>
                             </tr>
                             <tr>
