--- a/application/manage/view/System_setting/lst.html
+++ b/application/manage/view/System_setting/lst.html
@@ -22,6 +22,7 @@
                     <div class="result-list">
                         <a href="{:url('SystemSetting/admin_lst')}"><i class="icon-font">&#xe051;</i>管理员管理</a>
                         <a href="{:url('SystemSetting/setChooseTime')}"><i class="icon-font">&#xe051;</i>设置选课时间</a>
+                        <a href="{:url('SystemSetting/chooseTimeLst')}"><i class="icon-font">&#xe051;</i>选课时间列表</a>
                     </div>
                 </div>
             </form>
