--- a/application/manage/view/System_setting/setchoosetime.html
+++ b/application/manage/view/System_setting/setchoosetime.html
@@ -48,7 +48,7 @@
     <!--/sidebar-->
         <div class="result-wrap">
             <div class="result-content">
-                <form action="">
+                <form name="myform" id="myform" method="post">
                     <h2>设置选课时间</h2>
                     <div class="item">
                         <span>开始时间：</span>
