上线前最后一次提交

--- a/application/index/view/Repassword/do_repassword.html
+++ b/application/index/view/Repassword/do_repassword.html
@@ -37,18 +37,21 @@
 					<input type="password" placeholder="请输入新密码" name="newPassword" id="newPassword" required maxlength="16" minlength="6">
 					<input type="password" placeholder="请输入重复新密码" name="renewPassword" id="reNewPassword" required maxlength="16" minlength="6">
 					<input type="text" name="captcha" class="pass-text-input " required="true" placeholder="请输入验证码">
-					<img src="{:captcha_src()}"  onclick="this.src='{:captcha_src()}'">
-					<input type="submit" class="btn btn-danger" value="确认修改"> 
+					<img src="{:captcha_src()}"  onclick="this.src='{:captcha_src()}'" style="display:block;margin: 14px auto;width:200px;">
+					<input type="submit" class="btn btn-danger" value="确认修改"  style="display:block;margin: 14px auto;width:200px;"> 
             </form>
-		<!-- 跳转按钮 -->
-		<a class="btn btn-info sm toIndex" href="{:url('Index/index')}">返回首页</a>
-		<a class="btn btn-warning sm toTop" href="javascript:history.go(-1)">返回上一页</a>
 	</div>
 	</div>
 	
-	<!-- 底部版权 -->
-	<div class="layout-copy">
-	    2017 &copy; 西安邮电大学
-	</div>
+	<!-- Footer区域 -->
+	<div class="el-footer">
+			<div class="links"> 
+				<a target="_blank" href="http://www.xiyou.edu.cn/">西安邮电大学</a> | 
+				<a target="_blank" href="http://cs.xupt.edu.cn:81/xiyoucs/index.asp">计算机学院</a> | 
+				 
+				<a target="_blank" href="http://222.24.63.100:9149/CAL">计算机应用技术协会</a>
+			</div>
+			<p class="copyright"> Copyright © 2018 ACAT All Rights Reserved </p>
+		</div>
 </body>
 </html>
