--- a/application/index/view/Studentcourse/details.html
+++ b/application/index/view/Studentcourse/details.html
@@ -51,6 +51,12 @@
 								课程列表
 							</li>
 						</a>
+						<a href="{:url('Studentcourse/history')}">
+							<li>
+								<span class="icon icon-cloud">&nbsp;</span>
+								历史课程
+							</li>
+                        </a>
 						<a href="{:url('Notice/index')}">
 							<li>
 								<span class="icon icon-bell-alt">&nbsp;</span>
@@ -99,9 +105,15 @@
 			</div>
 		</div>
 	
-	<!-- 底部版权 -->
-	<div class="layout-copy">
-	    2017 &copy; 西安邮电大学
-	</div>
+	<!-- Footer区域 -->
+	<div class="el-footer">
+			<div class="links"> 
+				<a target="_blank" href="http://www.xiyou.edu.cn/">西安邮电大学</a> | 
+				<a target="_blank" href="http://cs.xupt.edu.cn:81/xiyoucs/index.asp">计算机学院</a> | 
+				 
+				<a target="_blank" href="http://222.24.63.100:9149/CAL">计算机应用技术协会</a>
+			</div>
+			<p class="copyright"> Copyright © 2018 ACAT All Rights Reserved </p>
+		</div>
 </body>
 </html>
