--- a/application/manage/view/Teacher/edit.html
+++ b/application/manage/view/Teacher/edit.html
@@ -26,7 +26,7 @@
                             <tr>
                                     <th width="10%"><i class="require-red">*</i>教师工号：</th>
                                     <td>
-                                        <input class="common-text required" id="t_num"  name="t_num" size="50" value="{$teacher.t_num}" type="text">
+                                        <input class="common-text required" id="t_num"  name="t_num" size="50" value="{$teacher.t_num}" type="text" onfocus=this.blur()>
                                     </td>
                             </tr>
                             <tr>
