--- a/application/manage/view/Choose/check.html
+++ b/application/manage/view/Choose/check.html
@@ -22,35 +22,25 @@
                     <table class="result-tab" width="100%">
                         <tr>
                             <th width="6%">课程编号</th>
+                            <th width="12%">课程名称</th>
                             <th width="6%">所属专业</th>
                             <th width="6%">所属年级</th>
-                            <th width="12%">课程名称</th>
                             <th width="4%">考核组织单位</th>
-                            <th width="4%">学分</th>
-                            <th width="4%">学时</th>
-                            <th width="4%">理论学时</th>
-                            <th width="4%">实验学时</th>
-                            <th width="4%">开课学期</th>
-                            <th width="4%">周学时</th>
+                            <th width="4%">开课单位</th>
                             <th width="6%">备注</th>
                             <th width="15%">操作</th>
                         </tr>
                         {volist name="course" id="vo"}
                         <tr>
                             <td>{$vo.c_num}</td>
+                            <td >{$vo.c_name}</td>
                             <td >{$vo.c_major}</td>
                             <td>{$vo.c_grade}</td>
-                            <td >{$vo.c_name}</td>
                             <td >{$vo.c_check_address}</td>
-                            <td >{$vo.c_score}</td>
-                            <td >{$vo.c_all_time}</td>
-                            <td >{$vo.c_theoretical_time}</td>
-                            <td >{$vo.c_test_hours}</td>
-                            <td >{$vo.c_semester}</td>
-                            <td >{$vo.c_week_time}</td>
+                            <td >{$vo.c_department}</td>
                             <td >{$vo.c_remarks}</td>
                             <td>
-                                <a class="link-update" href="{:url('studentlst',array('c_id'=>$vo.c_id,'c_major'=>$vo.c_major,'c_grade'=>$vo.c_grade,'name'=>$vo.c_name))}"><i class="icon-font">&#xe002;</i>选课名单</a>&nbsp;
+                                <a class="link-update" href="{:url('studentlst',array('c_id'=>$vo.c_id,'m_id'=>$m_id))}"><i class="icon-font">&#xe002;</i>选课名单</a>&nbsp;
                                 <a class="link-update" href="{:url('appoint/index',array('c_id'=>$vo.c_id))}"><i class="icon-font">&#xe002;</i>指定教师</a>&nbsp;
                             </td>
                         </tr>
