--- a/application/manage/view/Teacher/lst.html
+++ b/application/manage/view/Teacher/lst.html
@@ -22,7 +22,6 @@
                 <div class="result-title">
                     <div class="result-list">
                         <a href="{:url('teacher/add')}"><i class="icon-font"></i>新增教师信息</a>
-                        (共计{$sum}人)
                     </div>
                 </div>
                 <div class="result-content">
@@ -49,6 +48,7 @@
                         </tr>
                         {/volist}
                     </table>
+                    {$page}
                 </div>
             </form>
         </div>
