修改邮箱按钮后的提示

--- a/application/index/view/Teacher/info.html
+++ b/application/index/view/Teacher/info.html
@@ -130,6 +130,7 @@
 					<div class="list-opt">邮箱：</div>
 					<div class="list-cont">{$teacher['t_mail']}</div>
 					<button class="btn btn-danger btn-sm" id="modifyEmailBtn">修改邮箱</button>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:red;">温馨提示：</span>邮箱用于密码找回
 				</div>
 				<div class="main-list clearfix">
 					<div class="list-opt">密码：</div>
