新增培养计划查看

--- a/application/index/view/Studentinfo/index.html
+++ b/application/index/view/Studentinfo/index.html
@@ -131,6 +131,7 @@
 				</div>
 				<div class="main-list clearfix">
 						<div class="list-opt">专业：</div>
+						<a href="{$planPath}" hreflang="en" target="_blank"><button class="btn btn-danger btn-sm">培养计划</button></a>
 						<div class="list-cont">{$student['s_major']}</div>
 					</div>
 					<div class="main-list clearfix">
