--- a/application/index/view/Unselected/lst.html
+++ b/application/index/view/Unselected/lst.html
@@ -63,6 +63,9 @@
 					}
 					?>
 					<!-- <div class="confirmCourse">确认选择</div> -->
+					<a href ="{$planPath}" hreflang="en" target="_blank" class="historyBtnA">
+						<div class="historyBtn">培养计划</div>
+					</a>
 				</div>
 				<!-- 右侧主体 -->
 				<div class="cont-main clearfix">
