--- a/application/manage/view/Choose/studentlst.html
+++ b/application/manage/view/Choose/studentlst.html
@@ -15,7 +15,7 @@
     <div class="main-wrap">
 
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="{:url('Index/home')}">首页</a><span class="crumb-step">&gt;</span><a href="{:url('index')}">输入课程</a><span class="crumb-step">&gt;</span><a href="{:url('check')}">课程信息</a><span class="crumb-step">&gt;</span><span class="crumb-name">选课信息</span></div>
+            <div class="crumb-list"><i class="icon-font"></i><a href="{:url('Index/home')}">首页</a><span class="crumb-step">&gt;</span><a href="{:url('index')}">输入课程</a><span class="crumb-step">&gt;</span><span class="crumb-name">选课信息</span></div>
         </div>
         <div class="result-wrap">
             <form name="myform" id="myform" method="post">
