--- a/application/manage/view/Plan/add.html
+++ b/application/manage/view/Plan/add.html
@@ -29,16 +29,24 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th><i class="require-red">*</i>所属系部：</th>
-                                <td><input name="p_major" value="网络工程" type="radio" />网络工程
-                                <input name="p_major" value="软件工程" type="radio" />软件工程
-                                <input name="p_major" value="计算机科学与技术" type="radio" />计算机科学与技术</td>
+                                <th width="10%"><i class="require-red">*</i>适用专业名称：</th>
+                                <td>
+                                    <select class="common-text required" name="major">
+                                            {volist name="majorName" id="vo" empty="当前没有数据"}
+                                                <option value="{$vo.major_name}">{$vo.major_name}</option>
+                                            {/volist}
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
-                                <th><i class="require-red">*</i>适用年级：</th>
+                                <th width="8%"><i class="require-red">*</i>适用年级：</th>
                                 <td>
-                                    <input class="common-text required" id="p_grade"  name="p_grade" size="50" value="" type="text">
-                                </tr>
+                                        <select class="common-text required" name="grade">
+                                                {volist name="majorGrade" id="vo" empty="当前没有数据"}
+                                                    <option value="{$vo.major_grade}">{$vo.major_grade}</option>
+                                                {/volist}
+                                        </select>
+                                </td>
                             </tr>
                             <tr>
                                 <th></th>
