--- a/application/manage/view/Public/left.html
+++ b/application/manage/view/Public/left.html
@@ -8,7 +8,7 @@
                 <a href="#"><i class="icon-font">&#xe003;</i>常用操作</a>
                 <ul class="sub-menu">
                     <li><a href="{:url('course/lst')}"><i class="icon-font">&#xe008;</i>课程管理</a></li>
-                    <!--<li><a href="{:url('plan/lst')}"><i class="icon-font">&#xe005;</i>培养计划管理</a></li>-->
+                    <li><a href="{:url('plan/lst')}"><i class="icon-font">&#xe005;</i>培养计划管理</a></li>
                     <li><a href="{:url('teacher/lst')}"><i class="icon-font">&#xe006;</i>教师管理</a></li>
                     <li><a href="{:url('Student/lst')}"><i class="icon-font">&#xe004;</i>学生管理</a></li>
                     
