新增统计模块

--- a/application/manage/view/Batch_export/index.html
+++ b/application/manage/view/Batch_export/index.html
@@ -23,7 +23,7 @@
                         <a href="{:url('BatchExport/exportByMajor')}"><i class="icon-font">&#xe069;</i>专业导出</a>
                         <a href="{:url('BatchExport/exportByClass')}"><i class="icon-font">&#xe077;</i>班级导出</a>
                         <a href="{:url('')}"><i class="icon-font">&#xe068;</i>导出教师</a>
-                        <!--<a href="{:url('BatchExport/exportCTlstform')}"><i class="icon-font">&#xe068;</i>导出选课名单</a>-->
+                        <a href="{:url('BatchExport/exportCTlstform')}"><i class="icon-font">&#xe068;</i>导出选课名单(教务)</a>
                     </div>
                 </div>
             </form>
