--- a/application/manage/view/Batch_export/exportCTlstform.html
+++ b/application/manage/view/Batch_export/exportCTlstform.html
@@ -45,7 +45,7 @@
                             <tr>
                                 <th></th>
                                 <td>
-                                    <input class="btn btn-primary btn6 mr10" value="提交" type="submit">
+                                    <input class="btn btn-primary btn6 mr10" value="导出" type="submit">
                                     <input class="btn btn6" onclick="history.go(-1)" value="返回" type="button">
                                 </td>
                             </tr>
