--- a/application/manage/view/Appoint/index.html
+++ b/application/manage/view/Appoint/index.html
@@ -9,6 +9,45 @@
 </head>
 <body>
 {include file="Public/top" /}
+<script language = "JavaScript">
+        cities = new Object();
+    
+    <?php 
+        foreach($info as $key=>$value){
+            ?>
+            cities['{$key}'] = new Array(
+            <?php 
+                foreach($info[$key] as $v){
+                    echo "'" .$v['name'] . "'" .',';
+                }
+                ?>
+            );
+            <?php
+        }
+    ?>
+    function set_city(province, city)
+    {
+        var pv, cv;
+        var i, ii;
+    
+        pv=province.value;
+        cv=city.value;
+    
+        city.length=1;
+    
+        if(pv=='0') return;
+        if(typeof(cities[pv])=='undefined') return;
+    
+        for(i=0; i<cities[pv].length; i++)
+        {
+           ii = i+1;
+           city.options[ii] = new Option();
+           city.options[ii].text = cities[pv][i];
+           city.options[ii].value = cities[pv][i];
+        }
+    
+    }
+    </script>
 <div class="container clearfix">
     {include file="Public/left" /}
     <!--/sidebar-->
@@ -19,22 +58,35 @@
         </div>
         <div class="result-wrap">
             <div class="result-content">
-                <form action="" method="post" id="myform" name="myform" enctype="multipart/form-data">
+                <form action="{:url('appoint/appoint',array('c_id'=>input('c_id')))}" method="post" id="myform" name="myform" enctype="multipart/form-data">
                     <table class="insert-tab" width="100%">
                         <tbody>
-                            <tr>
-                                <th width="15%"><i class="require-red">*</i>请输入教工号：</th>
-                                <td>
-                                    <input class="common-text required"   name="t_num" size="50" value="" type="text">
+                             <tr>
+                                    <th width="10%"><i class="require-red">*</i>所在系部：</th>
+                                 <td> 
+                                    <select class="common-text required" name="province" onChange="set_city(this, this.form.city);">
+                                        <option value="0">选择系部</option>
+                                        {foreach name="info" item="vo" key="k"}
+                                            <option value="{$k}">{$k}   </option>
+                                        {/foreach}
+                                    </select>
                                 </td>
                             </tr>
                             <tr>
-                                <th></th>
+                                    <th width="10%"><i class="require-red">*</i>教师姓名：</th>
                                 <td>
-                                    <input class="btn btn-primary btn6 mr10" value="提交" type="submit">
-                                    <input class="btn btn6" onclick="history.go(-1)" value="返回" type="button">
+                                    <select class="common-text required"  name="city" id="citys">
+                                    <option value="0">选择教师</option>
+                                    </select>
                                 </td>
                             </tr>
+                            <tr>
+                                    <th></th>
+                                    <td>
+                                        <input class="btn btn-primary btn6 mr10" value="提交" type="submit">
+                                        <input class="btn btn6" onclick="history.go(-1)" value="返回" type="button">
+                                    </td>
+                                </tr>
                         </tbody></table>
                 </form>
             </div>
@@ -43,5 +95,6 @@
     </div>
     <!--/main-->
 </div>
+
 </body>
 </html>
