教师课程开关

--- a/application/manage/view/Public/left.html
+++ b/application/manage/view/Public/left.html
@@ -15,7 +15,7 @@
                     <li><a href="{:url('Major/lst')}"><i class="icon-font">&#xe055;</i>专业管理</a></li>
                     <li><a href="{:url('Distribute/index')}"><i class="icon-font">&#xe052;</i>分配课程</a></li> 
                     <li><a href="{:url('Choose/index')}"><i class="icon-font">&#xe012;</i>选课管理</a></li>
-                    <!-- <li><a href="{:url('Courseteacher/index')}"><i class="icon-font">&#xe025;</i>教师课程</a></li>    -->
+                    <li><a href="{:url('Courseteacher/index')}"><i class="icon-font">&#xe025;</i>教师课程</a></li>   
                 </ul>
             </li>
             <li>
